[package]
name = "consensus_core"
version = "0.1.0"
edition = "2021"

[dependencies]
jio_hashes = { path = "../../jio_hashes" }  # Adjust path if external
jio_math = { path = "../../jio_math" }     # Adjust path if external

futures-util = "0.3"  # For BoxFuture
thiserror = "1.0"  # For errors, but since we used std::error, optional
clap = { version = "4.0", features = ["derive"] }
num_cpus = "1.0"
serde = { version = "1.0", features = ["derive"] }
sha2 = "0.10"
async-trait = "0.1"
tokio = { version = "1.0", features = ["full"] }
rayon = "1.7"
dashmap = "5.5"
parking_lot = "0.12"

[dev-dependencies]
criterion = "0.5"
serde_json = "1.0"
ciborium = "0.2"

[features]
devnet-prealloc = []
